# tuxdrive

./: .gitignore  Cargo.toml  Dockerfile
examples/: event_print.rs
scripts/: writer.sh
scripts/file_scripts/: file_to_dir.sh  renamer.sh
scripts/run_scripts/: docker_shell.cr  watcher_test.cr
src/: atomic.rs  config.rs  error.rs  forest.rs  lib.rs  main.rs  reader.rs  watcher.rs
src/forest/: info.rs
