[package]
name = "tuxdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "4"
nix = "0.23"
crossbeam = "0.8"
rayon = "1.5"
num_cpus = "1.13"
env_logger = "0.9"
log = "0.4"
colored = "2"

[features]

[dev-dependencies]
derive_builder = "0.10.2"

